--- a/howto/githubcustomdomain/index.html
+++ b/howto/githubcustomdomain/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <a>The How TO</a>
-<a href="../"><button>Home</button></a>
+<a href="../../"><button>Home</button></a>
 <br>
 <div id="howto">
 <a>How to make a **FREE** custom Github Domain</a>
@@ -15,15 +15,15 @@
 <br>
 <a>It should look like this:</a>
 <br>
-<img src="../content/howto/githubcustomdomain/ClouDNS.png"></img>
+<img src="../../content/howto/githubcustomdomain/ClouDNS.png"></img>
 <br>
 <a>Create an account on ClouDNS by clicking the Sign In button at the top.</a>
 <br>
-<img src="../content/howto/githubcustomdomain/signinbtn.png"></img>
+<img src="../../content/howto/githubcustomdomain/signinbtn.png"></img>
 <br>
 <a>Click the Sign Up New Account button.</a>
 <br>
-<img src="../content/howto/githubcustomdomain/signupnabtn.png"></img>
+<img src="../../content/howto/githubcustomdomain/signupnabtn.png"></img>
 <br>
 <a>Sign up with your information then click Sign Up.</a>
 <br>
@@ -32,21 +32,21 @@
 <br>
 <a>On the dashboard click the Add Zone button on the DNS zones box.</a>
 <br>
-<img src="../content/howto/githubcustomdomain/addzone_dashboard.png"></img>
+<img src="../../content/howto/githubcustomdomain/addzone_dashboard.png"></img>
 <br>
 <a>Click on free zone in the dialog that poped up</a>
 <br>
-<img src="../content/howto/githubcustomdomain/freezonebtn.png"></img>
+<img src="../../content/howto/githubcustomdomain/freezonebtn.png"></img>
 <br>
 <a>Now on the new dialog that poped up enter the domain name you want</a>
 <br>
-<img src="../content/howto/githubcustomdomain/edn_diag.png"></img>
+<img src="../../content/howto/githubcustomdomain/edn_diag.png"></img>
 <br>
 <a>Once you done that, Click Register</a>
 <br>
 <a>You will be brought here:</a>
 <br>
-<img src="../content/howto/githubcustomdomain/domain_dashboard.png"></img>
+<img src="../../content/howto/githubcustomdomain/domain_dashboard.png"></img>
 <br>
 <a>Now head over to github</a>
 <a href="https://github.com"><button>Open</button></a>
@@ -55,7 +55,7 @@
 <br>
 <a>Now click the New File button</a>
 <br>
-<img src="../content/howto/githubcustomdomain/github_newfilebtn.png"></img>
+<img src="../../content/howto/githubcustomdomain/github_newfilebtn.png"></img>
 <br>
 <a>Name the file CNAME ( With Caps )</a>
 <br>
@@ -67,17 +67,17 @@
 <br>
 <a>Now click Commit New File</a>
 <br>
-<img src="../content/howto/github_cnf.png"></img>
+<img src="../../content/howto/github_cnf.png"></img>
 <br>
 <a>Now go back to ClouDNS</a>
 <br>
 <a>Now click Add New Record</a>
 <br>
-<img src="../content/howto/anrbtn.png"></img>
+<img src="../../content/howto/anrbtn.png"></img>
 <br>
 <a>A new dialog will popup</a>
 <br>
-<img src="../content/howto/anr_diag.png"></img>
+<img src="../../content/howto/anr_diag.png"></img>
 <br>
 <a>In the Points To field enter the following:</a>
 <br>
@@ -101,7 +101,7 @@
 <br>
 <a>If you get the following error:</a>
 <br>
-<img src="../content/howto/githubcustomdomain/err_name_not_resolved.png"></img>
+<img src="../../content/howto/githubcustomdomain/err_name_not_resolved.png"></img>
 <br>
 <a>Then you must do all these steps again but make sure the domain is different or you'll get the error again.</a>
 <br>
