fixed some broken images

--- a/howto/githubcustomdomain/index.html
+++ b/howto/githubcustomdomain/index.html
@@ -63,21 +63,21 @@
 <br>
 <a>Mine was testdomain098.dnsabr.com</a>
 <br>
-<a>So in the file i enter testdomain098.dnsabr.com</a>
+<a>So in the file I enter testdomain098.dnsabr.com</a>
 <br>
 <a>Now click Commit New File</a>
 <br>
-<img src="../../content/howto/github_cnf.png"></img>
+<img src="../../content/howto/githubcustomdomain/github_cnf.png"></img>
 <br>
 <a>Now go back to ClouDNS</a>
 <br>
 <a>Now click Add New Record</a>
 <br>
-<img src="../../content/howto/anrbtn.png"></img>
+<img src="../../content/howto/githubcustomdomain/anrbtn.png"></img>
 <br>
 <a>A new dialog will popup</a>
 <br>
-<img src="../../content/howto/anr_diag.png"></img>
+<img src="../../content/howto/githubcustomdomain/anr_diag.png"></img>
 <br>
 <a>In the Points To field enter the following:</a>
 <br>
